--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 header {
     height: 100vh;
-    padding-top: 5rem;
+    padding-top: 1.5rem;
     overflow: hidden;
 }
 
@@ -10,13 +10,28 @@ header {
     position: relative;
 }
 
+.presentation {
+    display: block;
+  
+}
+
+.header_container h5 {
+    font-size: 1.5rem;
+}
+
+.header_container h1 {
+    color: var(--color-primary);
+}
+
+
+
 /* ---------- CTA ----------*/
 
 .cta {
-    margin-top: 2.5rem;
     display: flex;
+    justify-content: end;
+    margin-top: 2rem;
     gap: 1.2rem;
-    justify-content: center;
 }
 
 /* ---------- HEADER SOCIALS ----------*/
@@ -48,16 +63,67 @@ header {
 /* ---------- ME ----------*/
 
 .me {
-    background: linear-gradient(var(--color-primary), transparent);
+    background: linear-gradient(var(--color-bg-variant), transparent);
     width: 22rem;
-    height: 30rem;
+    height: 28rem;
     position: absolute;
     left: 50%;
+    bottom: 5%;
     transform: translateX(-50%);
-    margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem;
+}
+
+.icon_dev {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #25262a;
+    filter: drop-shadow(-20px 20px 20px rgba(59, 10, 10, 0.534));
+}
+
+.icon_react {
+    position: absolute;
+    color: var(--color-primary);
+    width: 70px;
+    height: 70px;
+    left: 33%;
+    bottom: 25%;
+    z-index: 4;
+    animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.icon_node {
+    position: absolute;
+    color: green;
+    width: 75px;
+    height: 75px;
+    left: 60%;
+    bottom: 15%;
+    z-index: 4;
+}
+
+.icon_javascript {
+    position: absolute;
+    color: yellow;
+    width: 60px;
+    height: 60px;
+    left: 56%;
+    bottom: 50%;
+    z-index: 4;
 }
 
 /* ---------- SCROLL DOWN ----------*/
@@ -91,3 +157,16 @@ header {
         display: none;
     }
 }
+
+/*
+ background: linear-gradient(var(--color-primary), transparent);
+    width: 22rem;
+    height: 30rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 4rem;
+    border-radius: 12rem 12rem 0 0;
+    overflow: hidden;
+    padding: 5rem 1.5rem 1.5rem;
+*/
