--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,35 +1,16 @@
 .about_container {
     display: grid;
-    grid-template-columns: 35% 55%;
+    grid-template-columns: 30% 60%;
     gap: 15%;
 }
 
-.about_me {
+.about_tech {
     width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 2rem;
-    background: linear-gradient(45deg,
-            transparent,
-            var(--color-primary),
-            transparent);
-    display: grid;
-    place-items: center;
-}
-
-.about_me-image {
-    border-radius: 2rem;
-    overflow: hidden;
-    transform: rotate(10deg);
-    transition: var(--transition);
-}
-
-.about_me-image:hover {
-    transform: rotate(0);
 }
 
 .about_cards {
     display: grid;
-    grid-template-columns:  repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
 }
 
@@ -92,6 +73,37 @@
     color: var(--color-light);
 }
 
+.about_container img {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    border: 3px solid rgb(108, 161, 197);
+    transform: translate(-200px);
+    opacity: 0;
+    animation: fade-in 1s ease 1 0.5s forwards;
+}
+
+@keyframes fade-in {
+    to {
+        transform: translate(0);
+        opacity: 1;
+    }
+}
+
+.about_tech .personality {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem; 
+    color: var(--color-primary);
+    font-size: 1.5rem;
+}
+
+.about_content .btn-primary {
+    position: absolute;
+    left: 80%;
+    margin-right: 1rem;
+}
+
 /* ---------- MEDIA QUERIES (MEDIUM DEVICES) ---------- */
 
 @media screen and (max-width: 1024px) {
@@ -100,7 +112,7 @@
         gap: 0;
     }
 
-    .about_me {
+    .about_tech {
         width: 50%;
         margin: 2rem auto 4rem;
     }
@@ -113,7 +125,7 @@
 /* ---------- MEDIA QUERIES (SMALL DEVICES) ---------- */
 
 @media screen and (max-width: 600px) {
-    .about_me {
+    .about_tech {
         width: 65%;
         margin: 0 auto 3rem;
     }
@@ -132,9 +144,34 @@
     }
 }
 
+/*
+.about_me {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 2rem;
+    background: linear-gradient(45deg,
+            transparent,
+            var(--color-primary),
+            transparent);
+    display: grid;
+    place-items: center;
+}
+
+.about_me-image {
+    border-radius: 2rem;
+    overflow: hidden;
+    transform: rotate(10deg);
+    transition: var(--transition);
+}
+
+.about_me-image:hover {
+    transform: rotate(0);
+}
 
 
+  <div className="about_me-image">
+            <img src={ME} alt="About Image" />
+          </div>
 
 
-
-
+*/
